src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'expr'", "<INVALID>", "<INVALID>", "'auto'", 
                     "'integer'", "'void'", "'array'", "'break'", "'float'", 
                     "'return'", "'out'", "'boolean'", "'string'", "'for'", 
                     "'continue'", "'do'", "'function'", "'of'", "'else'", 
                     "'if'", "'while'", "'inherit'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'::'", "'('", "')'", 
                     "','", "';'", "':.?'", "'{'", "'}'", "'='", "'['", 
                     "']'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "BOOL_LIT", "AUTO", 
                      "INT", "VOID", "ARRAY_TYP", "BREAK", "FLOAT", "RETURN", 
                      "OUT", "BOOLEAN", "STRING", "FOR", "CONTINUE", "DO", 
                      "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", "MOD_OP", 
                      "NEGA_OP", "CONJ_OP", "DISJ_OP", "EQUAL_TO_OP", "NOT_EQUAL_TO_OP", 
                      "LESS_OP", "EQ_LESS_OP", "GREATER_OP", "EQ_GREATER_OP", 
                      "CONCAT_OP", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", 
                      "SEMICOLON", "COLON", "LEFT_CURBRACK", "RIGHT_CURBRACK", 
                      "ASSIG_OP", "LEFT_SQUAREBRACK", "RIGHT_SQUAREBRACK", 
                      "DOT", "IDENTIFIER", "INT_LIT", "INDEX", "STRING_LIT", 
                      "FLOAT_LIT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_arr = 1
    RULE_arrayList = 2
    RULE_non_null_arrayList = 3
    RULE_arrayEle = 4
    RULE_vardecl = 5
    RULE_noninitVardecl = 6
    RULE_initVardecl = 7
    RULE_initVardeclEle = 8
    RULE_idlist = 9
    RULE_typ = 10
    RULE_exprlist = 11
    RULE_non_null_exprlist = 12
    RULE_expr = 13
    RULE_paradecl = 14
    RULE_funcdecl = 15
    RULE_paramlist = 16
    RULE_params = 17
    RULE_non_null_params = 18
    RULE_body = 19
    RULE_concat_expr = 20
    RULE_concat_operand = 21
    RULE_relational_expr = 22
    RULE_relational_EQ_expr = 23
    RULE_relational_noEQ_expr = 24
    RULE_relational_EQ_operand = 25
    RULE_relational_EQ_op = 26
    RULE_relational_noEQ_op = 27
    RULE_relational_noEQ_operand = 28
    RULE_logical_expr = 29
    RULE_logical_op = 30
    RULE_add_expr = 31
    RULE_mul_expr = 32
    RULE_mul_op = 33
    RULE_nega_expr = 34
    RULE_sign_expr = 35
    RULE_index_expr = 36
    RULE_index_list = 37
    RULE_subexpr = 38
    RULE_funcall_expr = 39
    RULE_argulist = 40

    ruleNames =  [ "program", "arr", "arrayList", "non_null_arrayList", 
                   "arrayEle", "vardecl", "noninitVardecl", "initVardecl", 
                   "initVardeclEle", "idlist", "typ", "exprlist", "non_null_exprlist", 
                   "expr", "paradecl", "funcdecl", "paramlist", "params", 
                   "non_null_params", "body", "concat_expr", "concat_operand", 
                   "relational_expr", "relational_EQ_expr", "relational_noEQ_expr", 
                   "relational_EQ_operand", "relational_EQ_op", "relational_noEQ_op", 
                   "relational_noEQ_operand", "logical_expr", "logical_op", 
                   "add_expr", "mul_expr", "mul_op", "nega_expr", "sign_expr", 
                   "index_expr", "index_list", "subexpr", "funcall_expr", 
                   "argulist" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    BOOL_LIT=3
    AUTO=4
    INT=5
    VOID=6
    ARRAY_TYP=7
    BREAK=8
    FLOAT=9
    RETURN=10
    OUT=11
    BOOLEAN=12
    STRING=13
    FOR=14
    CONTINUE=15
    DO=16
    FUNCTION=17
    OF=18
    ELSE=19
    IF=20
    WHILE=21
    INHERIT=22
    ADD_OP=23
    SUB_OP=24
    MUL_OP=25
    DIV_OP=26
    MOD_OP=27
    NEGA_OP=28
    CONJ_OP=29
    DISJ_OP=30
    EQUAL_TO_OP=31
    NOT_EQUAL_TO_OP=32
    LESS_OP=33
    EQ_LESS_OP=34
    GREATER_OP=35
    EQ_GREATER_OP=36
    CONCAT_OP=37
    LEFT_PAREN=38
    RIGHT_PAREN=39
    COMMA=40
    SEMICOLON=41
    COLON=42
    LEFT_CURBRACK=43
    RIGHT_CURBRACK=44
    ASSIG_OP=45
    LEFT_SQUAREBRACK=46
    RIGHT_SQUAREBRACK=47
    DOT=48
    IDENTIFIER=49
    INT_LIT=50
    INDEX=51
    STRING_LIT=52
    FLOAT_LIT=53
    WS=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arr(self):
            return self.getTypedRuleContext(MT22Parser.ArrContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def concat_expr(self):
            return self.getTypedRuleContext(MT22Parser.Concat_exprContext,0)


        def funcall_expr(self):
            return self.getTypedRuleContext(MT22Parser.Funcall_exprContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.arr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.funcdecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.concat_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.funcall_expr()
                self.state = 87
                self.match(MT22Parser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_CURBRACK(self):
            return self.getToken(MT22Parser.LEFT_CURBRACK, 0)

        def arrayList(self):
            return self.getTypedRuleContext(MT22Parser.ArrayListContext,0)


        def RIGHT_CURBRACK(self):
            return self.getToken(MT22Parser.RIGHT_CURBRACK, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr" ):
                return visitor.visitArr(self)
            else:
                return visitor.visitChildren(self)




    def arr(self):

        localctx = MT22Parser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MT22Parser.LEFT_CURBRACK)
            self.state = 92
            self.arrayList()
            self.state = 93
            self.match(MT22Parser.RIGHT_CURBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_null_arrayList(self):
            return self.getTypedRuleContext(MT22Parser.Non_null_arrayListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayList" ):
                return visitor.visitArrayList(self)
            else:
                return visitor.visitChildren(self)




    def arrayList(self):

        localctx = MT22Parser.ArrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arrayList)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT_LIT, MT22Parser.STRING_LIT, MT22Parser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.non_null_arrayList()
                pass
            elif token in [MT22Parser.RIGHT_CURBRACK]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_null_arrayListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayEle(self):
            return self.getTypedRuleContext(MT22Parser.ArrayEleContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def non_null_arrayList(self):
            return self.getTypedRuleContext(MT22Parser.Non_null_arrayListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_non_null_arrayList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_null_arrayList" ):
                return visitor.visitNon_null_arrayList(self)
            else:
                return visitor.visitChildren(self)




    def non_null_arrayList(self):

        localctx = MT22Parser.Non_null_arrayListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_non_null_arrayList)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.arrayEle()
                self.state = 100
                self.match(MT22Parser.COMMA)
                self.state = 101
                self.non_null_arrayList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.arrayEle()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayEleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MT22Parser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MT22Parser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MT22Parser.STRING_LIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayEle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayEle" ):
                return visitor.visitArrayEle(self)
            else:
                return visitor.visitChildren(self)




    def arrayEle(self):

        localctx = MT22Parser.ArrayEleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayEle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT_LIT) | (1 << MT22Parser.STRING_LIT) | (1 << MT22Parser.FLOAT_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initVardecl(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclContext,0)


        def noninitVardecl(self):
            return self.getTypedRuleContext(MT22Parser.NoninitVardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.initVardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.noninitVardecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoninitVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_noninitVardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoninitVardecl" ):
                return visitor.visitNoninitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def noninitVardecl(self):

        localctx = MT22Parser.NoninitVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_noninitVardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.idlist()
            self.state = 113
            self.match(MT22Parser.COLON)
            self.state = 114
            self.typ()
            self.state = 115
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def initVardeclEle(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclEleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initVardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitVardecl" ):
                return visitor.visitInitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def initVardecl(self):

        localctx = MT22Parser.InitVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initVardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MT22Parser.IDENTIFIER)
            self.state = 118
            self.initVardeclEle()
            self.state = 119
            self.expr()
            self.state = 120
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVardeclEleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def initVardeclEle(self):
            return self.getTypedRuleContext(MT22Parser.InitVardeclEleContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIG_OP(self):
            return self.getToken(MT22Parser.ASSIG_OP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initVardeclEle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitVardeclEle" ):
                return visitor.visitInitVardeclEle(self)
            else:
                return visitor.visitChildren(self)




    def initVardeclEle(self):

        localctx = MT22Parser.InitVardeclEleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initVardeclEle)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(MT22Parser.COMMA)
                self.state = 123
                self.match(MT22Parser.IDENTIFIER)
                self.state = 124
                self.initVardeclEle()
                self.state = 125
                self.expr()
                self.state = 126
                self.match(MT22Parser.COMMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(MT22Parser.COMMA)
                self.state = 129
                self.match(MT22Parser.IDENTIFIER)
                self.state = 130
                self.match(MT22Parser.COLON)
                self.state = 131
                self.typ()
                self.state = 132
                self.match(MT22Parser.ASSIG_OP)
                self.state = 133
                self.expr()
                self.state = 134
                self.match(MT22Parser.COMMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idlist)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MT22Parser.IDENTIFIER)
                self.state = 139
                self.match(MT22Parser.COMMA)
                self.state = 140
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def ARRAY_TYP(self):
            return self.getToken(MT22Parser.ARRAY_TYP, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT) | (1 << MT22Parser.VOID) | (1 << MT22Parser.ARRAY_TYP) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_null_exprlist(self):
            return self.getTypedRuleContext(MT22Parser.Non_null_exprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprlist)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.non_null_exprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_null_exprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_non_null_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_null_exprlist" ):
                return visitor.visitNon_null_exprlist(self)
            else:
                return visitor.visitChildren(self)




    def non_null_exprlist(self):

        localctx = MT22Parser.Non_null_exprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_non_null_exprlist)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.expr()
                self.state = 151
                self.match(MT22Parser.COMMA)
                self.state = 152
                self.exprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MT22Parser.RULE_expr
